<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Deezloader</string>
    <string name="notificationService">Deezloader server is running</string>
    <string name="serviceName">Deezloader Service</string>
    <string name="serverLoadingText">Loading, this could take up to 5 minutes</string>
    <string name="serverReady">Server ready</string>
    <string name="updateButtonText">Click here for the latest version</string>
    <string name="telegramChatButton">Telegram Chat -> bugs, questions, etc.</string>
    <string name="openInExternal">Open Deezloader in an external browser</string>
    <string name="openInInternal">Open Deezloader here</string>
    <string name="faq"></string>
    <string name="actualversion" translatable="false">Version:</string>
    <string name="startserver" translatable="false">Starting server</string>
    <string name="permission" translatable="false">You should give the permission to use the app</string>
    <string name="exit_back" translatable="false">Do you want to exit the application? Downloads will be cancelled</string>
    <string name="confirmation" translatable="false">Yes</string>
    <string name="denial" translatable="false">No</string>
</resources>
